--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,9 @@
 @import "tailwindcss";
 
 @theme {
-  --color-grey-900: #141414;
-  --color-grey-800: #1f1f1f;
-  --color-grey-700: #333333;
+  --color-gray-900: #141414;
+  --color-gray-800: #1f1f1f;
+  --color-gray-700: #333333;
 
   --color-green-900: #c4f82a;
 
@@ -15,6 +15,7 @@
   font-weight: 700;
   line-height: 150%;
   letter-spacing: 0;
+  font-family: var(--font-inter);
 }
 
 @utility base {
@@ -22,6 +23,7 @@
   font-weight: 400;
   line-height: 150%;
   letter-spacing: 0;
+  font-family: var(--font-inter);
 }
 
 @utility base-bold {
@@ -29,6 +31,7 @@
   font-weight: 700;
   line-height: 150%;
   letter-spacing: 0;
+  font-family: var(--font-inter);
 }
 
 @utility flex-center {
